--- a/.github/workflows/ci-pipeline-client.yml
+++ b/.github/workflows/ci-pipeline-client.yml
@@ -119,6 +119,7 @@ jobs:
 
   client-build:
     runs-on: ubuntu-latest
+    needs: lint
     defaults:
       run:
         working-directory: ./client
