--- a/client/package.json
+++ b/client/package.json
@@ -19,10 +19,11 @@
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^9.9.1",
     "globals": "^15.9.0",
     "prettier": "^3.3.3",
     "tailwindcss": "^2.2.19",
-    "vite": "^2.6.4"
+    "vite": "^5.4.2"
   }
 }
