--- a/.github/workflows/ci-pipeline-client.yml
+++ b/.github/workflows/ci-pipeline-client.yml
@@ -106,7 +106,7 @@ jobs:
           VALIDATE_VUE_PRETTIER: false
           VALIDATE_YAML: false
           ##Super Lint settings
-          VALIDATE_ALL_CODEBASE: false
+          VALIDATE_ALL_CODEBASE: true
           IGNORE_GITIGNORED_FILES: true
           DEFAULT_BRANCH: main
           SAVE_SUPER_LINTER_OUTPUT: true
@@ -148,14 +148,12 @@ jobs:
     name: SonarCloud Quality Gate
     runs-on: ubuntu-latest
     needs: client-build
+    defaults:
+      run:
+        working-directory: ./client
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
-
-      - name: Set up Java for SonarCloud
-        uses: actions/setup-java@v3
-        with:
-          java-version: '11'
+      - name: Setup SonarQube
+        uses: warchant/setup-sonar-scanner@v8
 
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@v2
