--- a/.github/workflows/ci-pipeline-client.yml
+++ b/.github/workflows/ci-pipeline-client.yml
@@ -118,6 +118,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.PAT_GITHUB }}
 
   client-build:
+    name: Build Client Code
     runs-on: ubuntu-latest
     needs: lint
     defaults:
@@ -148,9 +149,6 @@ jobs:
     name: SonarCloud Quality Gate
     runs-on: ubuntu-latest
     needs: client-build
-    defaults:
-      run:
-        working-directory: ./client
     steps:
       - name: Setup SonarQube
         uses: warchant/setup-sonar-scanner@v8
@@ -171,7 +169,7 @@ jobs:
             -Dsonar.verbose=true
 
   docker_build:
-    name: Build Docker Image
+    name: Build Client Docker Image
     runs-on: ubuntu-latest
     needs: sonarcloud
     steps:
@@ -182,7 +180,7 @@ jobs:
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: Build Docker image
-        run: docker build -t myapp:latest .
+        run: docker build -t web3-client:latest .
 
   snyk_scan:
     name: Snyk Docker Image Scan
@@ -209,7 +207,7 @@ jobs:
           sudo dpkg -i trivy_0.29.2_Linux-64bit.deb
 
       - name: Trivy Scan
-        run: trivy image --severity HIGH,CRITICAL --exit-code 1 myapp:latest
+        run: trivy image --severity HIGH,CRITICAL --exit-code 1 web3-client:latest
 
   docker_push:
     name: Push Docker Image to ECR
