--- a/.github/workflows/ci-pipeline-client.yml
+++ b/.github/workflows/ci-pipeline-client.yml
@@ -106,7 +106,7 @@ jobs:
           VALIDATE_VUE_PRETTIER: false
           VALIDATE_YAML: false
           ##Super Lint settings
-          VALIDATE_ALL_CODEBASE: true
+          VALIDATE_ALL_CODEBASE: false
           IGNORE_GITIGNORED_FILES: true
           DEFAULT_BRANCH: main
           SAVE_SUPER_LINTER_OUTPUT: true
@@ -149,7 +149,17 @@ jobs:
     name: SonarCloud Quality Gate
     runs-on: ubuntu-latest
     needs: client-build
+    defaults:
+      run:
+        working-directory: ./client
+    strategy:
+      matrix:
+        node-version: [18.x]
+        architecture: [x64]
     steps:
+      - name: Check-out Code  
+        uses: actions/checkout@v4
+
       - name: Setup SonarQube
         uses: warchant/setup-sonar-scanner@v8
 
