--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview",
-    "lint": "eslint ."
+    "serve": "vite preview"
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.3.4",
@@ -20,9 +19,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
-    "eslint": "^9.9.1",
     "globals": "^15.9.0",
-    "prettier": "^3.3.3",
     "tailwindcss": "^2.2.19",
     "vite": "^5.4.2"
   }
