--- a/.github/workflows/ci-pipeline-smartcontract.yml
+++ b/.github/workflows/ci-pipeline-smartcontract.yml
@@ -171,7 +171,7 @@ jobs:
             -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
             -Dsonar.host.url=${{ secrets.SONAR_URL }}
             -Dsonar.login=${{ secrets.SONAR_TOKEN }}
-            -Dsonar.sources=src/
+            -Dsonar.sources=contracts/,scripts/
             -Dsonar.verbose=true
 
   docker_image:
