--- a/.github/workflows/ci-pipeline-smartcontract.yml
+++ b/.github/workflows/ci-pipeline-smartcontract.yml
@@ -199,7 +199,7 @@ jobs:
       - name: Build Docker image
         env:
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          REPOSITORY: ${{ secrets.ECR_REPOSITORY_NAME }}
+          REPOSITORY: ${{ secrets.ECR_SMART_CONTRACT_REPOSITORY_NAME }}
           IMAGE_TAG: web3-smartcontract-latest
         run: |
           docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
