--- a/k8s_manifests/client.yml
+++ b/k8s_manifests/client.yml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: client
-  namespace: web3
+  namespace: client
   labels:
     app: client
 spec:
@@ -30,7 +30,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: client-service
-  namespace: web3
+  namespace: client
 spec:
   selector:
     app: client
