--- a/k8s_manifests/smartcontract.yml
+++ b/k8s_manifests/smartcontract.yml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: smartcontract
-  namespace: smartcontract
+  namespace: web3app
   labels:
     app: smartcontract
 spec:
@@ -22,7 +22,7 @@ spec:
     spec:
       containers:
       - name: smartcontract
-        image: 376801182676.dkr.ecr.eu-north-1.amazonaws.com/web3/smart_contract/web3-smartcontract-latest
+        image: 376801182676.dkr.ecr.eu-north-1.amazonaws.com/web3/smart_contract/web3-smartcontract:latest
         ports:
         - containerPort: 8545
 ---
@@ -30,7 +30,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: smartcontract-service
-  namespace: smartcontract
+  namespace: web3app
 spec:
   selector:
     app: smartcontract
