CI Pipeline fixes 3.0

--- a/.github/workflows/ci-pipeline-smartcontract.yml
+++ b/.github/workflows/ci-pipeline-smartcontract.yml
@@ -200,7 +200,7 @@ jobs:
         env:
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           REPOSITORY: ${{ secrets.ECR_SMART_CONTRACT_REPOSITORY_NAME }}
-          IMAGE_TAG: web3-smartcontract-latest
+          IMAGE_TAG: web3-smartcontract
         run: |
           docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
           echo "image=$REGISTRY/$REPOSITORY:$IMAGE_TAG" >> $GITHUB_ENV
