--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name localhost:3000;
+    server_name http://ae344f815df7a4231856f7fa68d79eeb-0adec61252b8667e.elb.eu-north-1.amazonaws.com/:3000;
 
     location / {
         root /usr/share/nginx/html;
