--- a/k8s_manifests/smartcontract.yml
+++ b/k8s_manifests/smartcontract.yml
@@ -34,8 +34,9 @@ metadata:
 spec:
   selector:
     app: smartcontract
-  type: NodePort
+  type: ClusterIP
   ports:
     - protocol: TCP
       port: 8545
+      targetPort: 8545
 
