--- a/smart_contract/Dockerfile
+++ b/smart_contract/Dockerfile
@@ -26,7 +26,7 @@ COPY --from=build /app/hardhat.config.* ./
 
 EXPOSE 8545
 
-CMD ["npx", "hardhat", "node"]
+CMD ["npx", "hardhat", "node", "--hostname", "0.0.0.0"]
 
 
 
