--- a/k8s_manifests/ingress.yml
+++ b/k8s_manifests/ingress.yml
@@ -20,7 +20,7 @@ spec:
               service:
                 name: smart-contract-service
                 port:   
-                  number: 8545
+                  number: 8545 #experimental
           - path: /
             pathType: Prefix
             backend:
