--- a/k8s_manifests/smartcontract.yml
+++ b/k8s_manifests/smartcontract.yml
@@ -22,7 +22,7 @@ spec:
     spec:
       containers:
       - name: smartcontract
-        image: 376801182676.dkr.ecr.eu-north-1.amazonaws.com/web3/smartcontract:web3-smartcontract:latest
+        image: 376801182676.dkr.ecr.eu-north-1.amazonaws.com/web3/smartcontract:latest
         ports:
         - containerPort: 8545
 ---
